--- a/app/src/main/res/layout/layout_weight.xml
+++ b/app/src/main/res/layout/layout_weight.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal" />
 
         <TextView
             android:id="@+id/calculation"
-            android:layout_width="match_parent"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"></TextView>
-    </LinearLayout>
+            android:layout_weight="1" />
+    />
 
 
     <LinearLayout
@@ -36,7 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/button" />
+            android:text="@string/button"
+            style="?android:attr/buttonBarButtonStyle"/>
     </LinearLayout>
 
     <Button
@@ -46,4 +47,4 @@
         android:layout_weight="1"
         android:text="@string/button" />
 
-</LinearLayout>
+</TextView>
